# cedar

./: BUILDING_ON_MAC.md  CONTRIBUTING.md  Makefile  README.md  api.go  api_test.go  engine.go  engine_test.go  eval.go  ffi.go  ffi_test.go  go.mod  go.sum  helper.go
.github/workflows/: go-test.yaml  rust-test.yaml  wasm-build.yaml
examples/authorization_request/: go.mod  main.go
lib/: .gitignore  Cargo.toml
lib/src/: interface.rs  lib.rs
static/: cedar.wasm
