[package]

name = "cedarwasm"
description = "Cedar Policy exported to WebAssembly for use in go"
edition = "2021"
version = "1.0.0"

[dependencies]
cedar-policy = { version = "2.0.0" }
wee_alloc = "0.4.5"
once_cell = "1.17.1"

[lib]
crate_type = ["cdylib"]

[profile.release]
opt-level = 2
lto = true
codegen-units = 1
